--- a/NotasLoja/pom.xml
+++ b/NotasLoja/pom.xml
@@ -14,8 +14,8 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>20</maven.compiler.source>
-        <maven.compiler.target>20</maven.compiler.target>
+        <maven.compiler.source>18</maven.compiler.source><!-- ESSE NÚMERO DEVE CONDIZER COM: Tools> Java Platforms> JDK number -->
+        <maven.compiler.target>18</maven.compiler.target>
         <exec.mainClass>com.nandones.notasloja.NotasLoja</exec.mainClass>
     </properties>
 </project>
