--- a/NotasLoja/pom.xml
+++ b/NotasLoja/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE124</version>
         </dependency>
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
